Add LoginForm, repositories, models, and MongoDB support
Introduced new repositories and models for managing companies, branches, forms, users, and permissions. Added `LoginForm` with a modernized UI, login logic, and user settings management. Integrated MongoDB attributes for document mapping in models. Updated project files to include new classes and resources. Enhanced UI with an application icon and updated `CheckForUpdateForm`. Incremented assembly version to `1.0.1.8`. Removed redundant code and added placeholder methods for permissions and settings.

--- a/SpectrumV1.DataLayers/SpectrumV1.DataLayers.csproj
+++ b/SpectrumV1.DataLayers/SpectrumV1.DataLayers.csproj
@@ -143,8 +143,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Administration\Update\LiveUpdateSettingsProvider.cs" />
+    <Compile Include="Common\Companies\BranchRepository.cs" />
+    <Compile Include="Common\Companies\CompanyRepository.cs" />
+    <Compile Include="Common\Forms\FormCategoryRepository.cs" />
+    <Compile Include="Common\Forms\FormRepository.cs" />
     <Compile Include="DataUtilities\ConnectionHelper.cs" />
+    <Compile Include="Projects\ContractDetailModel.cs" />
+    <Compile Include="Projects\ProjectDocumentsModel.cs" />
+    <Compile Include="Projects\ProjectModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Users\UserPermissionRepository.cs" />
+    <Compile Include="Users\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SpectrumV1.Models\SpectrumV1.Models.csproj">
