--- a/SpectrumV1.Models/SpectrumV1.Models.csproj
+++ b/SpectrumV1.Models/SpectrumV1.Models.csproj
@@ -143,12 +143,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Administration\Update\LiveUpdateSettingsModel.cs" />
+    <Compile Include="Common\Companies\BranchModel.cs" />
+    <Compile Include="Common\Companies\CompanyModel.cs" />
     <Compile Include="EntityObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Users\CurrentUser.cs" />
+    <Compile Include="Users\UserDetailModel.cs" />
+    <Compile Include="Users\old-UserModel.cs" />
+    <Compile Include="Users\UserModel.cs" />
+    <Compile Include="Users\UserPermissionModel.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Users\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
