Add MongoDB connection helper and settings integration
Introduced `TryConnect` in `ConnectionHelper.cs` to validate
MongoDB connectivity using discrete parameters or a full
connection string. Added `DatabaseSettings.cs` as a wrapper
for managing database configurations via strongly-typed
settings.

Enhanced `HelperApplication.cs` with a fallback mechanism
to prompt users with `MongoDbConnectionForm` for updating
connection details interactively. Updated `app.config` and
`Settings.settings` to include user-scoped settings for
database and application configurations.

Added `MongoDbConnectionForm.cs` for interactive MongoDB
connection testing. Improved modularity, user experience,
and maintainability across the project.

--- a/SpectrumV1.UI/App.config
+++ b/SpectrumV1.UI/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <SpectrumV1.Properties.Settings>
             <setting name="ApplicationName" serializeAs="String">
-                <value />
+                <value>Spectrum Management Software</value>
             </setting>
             <setting name="ApplicationPalette" serializeAs="String">
                 <value />
