--- a/SpectrumV1.DataLayers/SpectrumV1.DataLayers.csproj
+++ b/SpectrumV1.DataLayers/SpectrumV1.DataLayers.csproj
@@ -148,10 +148,16 @@
     <Compile Include="Common\Forms\FormCategoryRepository.cs" />
     <Compile Include="Common\Forms\FormRepository.cs" />
     <Compile Include="DataUtilities\ConnectionHelper.cs" />
+    <Compile Include="DataUtilities\DatabaseSettings.cs" />
     <Compile Include="Projects\ContractDetailModel.cs" />
     <Compile Include="Projects\ProjectDocumentsModel.cs" />
     <Compile Include="Projects\ProjectModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Users\UserPermissionRepository.cs" />
     <Compile Include="Users\UserRepository.cs" />
   </ItemGroup>
@@ -167,6 +173,10 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.ValueTuple.4.6.1\build\net471\System.ValueTuple.targets" Condition="Exists('..\packages\System.ValueTuple.4.6.1\build\net471\System.ValueTuple.targets')" />
