--- a/SpectrumV1.DataLayers/app.config
+++ b/SpectrumV1.DataLayers/app.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="SpectrumV1.DataLayers.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -48,4 +53,44 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <SpectrumV1.DataLayers.Properties.Settings>
+      <setting name="SecureConnection" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ApiPort" serializeAs="String">
+        <value>44368</value>
+      </setting>
+      <setting name="DatabasePort" serializeAs="String">
+        <value>3306</value>
+      </setting>
+      <setting name="DatabaseName" serializeAs="String">
+        <value>spectrumdb</value>
+      </setting>
+      <setting name="DatabaseHost" serializeAs="String">
+        <value>localhost</value>
+      </setting>
+      <setting name="DatabasePassword" serializeAs="String">
+        <value>root</value>
+      </setting>
+      <setting name="DatabaseUser" serializeAs="String">
+        <value>root</value>
+      </setting>
+      <setting name="LevelSqlLog" serializeAs="String">
+        <value>Error</value>
+      </setting>
+      <setting name="ApiUrl" serializeAs="String">
+        <value>localhost</value>
+      </setting>
+      <setting name="DatabaseType" serializeAs="String">
+        <value>MongoDb</value>
+      </setting>
+      <setting name="LevelAppLog" serializeAs="String">
+        <value>Info</value>
+      </setting>
+      <setting name="MongoDbConfigString" serializeAs="String">
+        <value />
+      </setting>
+    </SpectrumV1.DataLayers.Properties.Settings>
+  </userSettings>
 </configuration>
