--- a/SpectrumV1.UI/Properties/Settings.settings
+++ b/SpectrumV1.UI/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ApplicationName" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">Spectrum Management Software</Value>
     </Setting>
     <Setting Name="ApplicationPalette" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
