--- a/SpectrumV1.UI/SpectrumV1.UI.csproj
+++ b/SpectrumV1.UI/SpectrumV1.UI.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\HelperApplication.cs" />
     <Compile Include="Utilities\LogInfoRepository.cs" />
+    <Compile Include="Utilities\MongoDbConnectionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Views\Main\AboutForm.cs">
       <SubType>Form</SubType>
     </Compile>
