Refactor database handling for multi-DB support
Replaced MongoDB-specific logic with a generic database handling mechanism to support multiple database types (SQL Server, MySQL, SQLite, MongoDB).

- Refactored `ConnectionHelper` to use `ConnectionModel` and added `BuildConnectionString` and `DataConnection` methods.
- Introduced `AbstractDatabaseModel`, `DatabaseFactory`, and `IDatabase` for database abstraction.
- Added `MongoDbDatabaseModel` and `SqlServerDatabaseModel` for specific database implementations.
- Replaced `MongoDbConnectionForm` with `ServerConfigurationForm` for a generic database configuration UI.
- Updated `DatabaseSettings`, `Settings.settings`, and `app.config` to use `DatabaseConnectionString`.
- Improved error handling for database connection attempts.
- Updated enums to include `SqLite` as a supported database type.

These changes enhance flexibility, scalability, and maintainability by enabling support for multiple database types.

--- a/SpectrumV1.DataLayers/Properties/Settings.settings
+++ b/SpectrumV1.DataLayers/Properties/Settings.settings
@@ -35,7 +35,7 @@
     <Setting Name="LevelAppLog" Type="System.String" Scope="User">
       <Value Profile="(Default)">Info</Value>
     </Setting>
-    <Setting Name="MongoDbConfigString" Type="System.String" Scope="User">
+    <Setting Name="DatabaseConnectionString" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
