--- a/SpectrumV1.DataLayers/app.config
+++ b/SpectrumV1.DataLayers/app.config
@@ -88,7 +88,7 @@
       <setting name="LevelAppLog" serializeAs="String">
         <value>Info</value>
       </setting>
-      <setting name="MongoDbConfigString" serializeAs="String">
+      <setting name="DatabaseConnectionString" serializeAs="String">
         <value />
       </setting>
     </SpectrumV1.DataLayers.Properties.Settings>
