--- a/SpectrumV1.UI/SpectrumV1.UI.csproj
+++ b/SpectrumV1.UI/SpectrumV1.UI.csproj
@@ -65,14 +65,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\HelperApplication.cs" />
     <Compile Include="Utilities\LogInfoRepository.cs" />
-    <Compile Include="Utilities\MongoDbConnectionForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Views\Main\AboutForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\Main\AboutForm.Designer.cs">
       <DependentUpon>AboutForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Main\Connections\ServerConfigurationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Main\Connections\ServerConfigurationForm.Designer.cs">
+      <DependentUpon>ServerConfigurationForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Main\MainForm.cs">
       <SubType>Form</SubType>
@@ -110,6 +113,9 @@
     </Compile>
     <EmbeddedResource Include="Views\Main\AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Main\Connections\ServerConfigurationForm.resx">
+      <DependentUpon>ServerConfigurationForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Main\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
