Refactor repositories and add user authentication service
Refactored `BranchRepository` and `CompanyRepository` to implement new interfaces (`IBranchRepository` and `ICompanyRepository`) with asynchronous CRUD operations. Introduced `IUserRepository` and implemented it in `UserRepository` with MongoDB-based operations.

Added `LoginService` for user authentication, including password hashing and verification. Updated `LoginForm` to use `LoginService` for authentication and refactored login logic.

Enhanced `BranchModel` and `CompanyModel` with MongoDB-specific attributes. Updated `CurrentUser` to include `CompanyName`.

Updated project references and dependencies, including `Microsoft.AspNetCore.Cryptography` and new packages like `System.Buffers` and `System.Memory`.

Minor formatting changes and cleanup in various files.

--- a/SpectrumV1.DataLayers/SpectrumV1.DataLayers.csproj
+++ b/SpectrumV1.DataLayers/SpectrumV1.DataLayers.csproj
@@ -145,6 +145,8 @@
     <Compile Include="Administration\Update\LiveUpdateSettingsProvider.cs" />
     <Compile Include="Common\Companies\BranchRepository.cs" />
     <Compile Include="Common\Companies\CompanyRepository.cs" />
+    <Compile Include="Common\Companies\IBranchRepository.cs" />
+    <Compile Include="Common\Companies\ICompanyRepository.cs" />
     <Compile Include="Common\Forms\FormCategoryRepository.cs" />
     <Compile Include="Common\Forms\FormRepository.cs" />
     <Compile Include="DataAccess\AbstractDatabaseModel.cs" />
@@ -163,6 +165,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Users\IUserRepository.cs" />
     <Compile Include="Users\UserPermissionRepository.cs" />
     <Compile Include="Users\UserRepository.cs" />
   </ItemGroup>
