--- a/SpectrumV1.UI/SpectrumV1.UI.csproj
+++ b/SpectrumV1.UI/SpectrumV1.UI.csproj
@@ -97,6 +97,12 @@
     <Compile Include="Views\Main\WaitForm1.Designer.cs">
       <DependentUpon>WaitForm1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Users\CreateNewPasswordForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Users\CreateNewPasswordForm.Designer.cs">
+      <DependentUpon>CreateNewPasswordForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Users\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +133,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Main\WaitForm1.resx">
       <DependentUpon>WaitForm1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Users\CreateNewPasswordForm.resx">
+      <DependentUpon>CreateNewPasswordForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Users\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
