Refactor password management and settings
Replaced `CompanyId` with `CompanyName` for flexibility.
Added `ChangePasswordForm` to support user-initiated password changes.
Enhanced `CreateNewPasswordForm` for first-time or forced password resets.
Updated `LoginForm` to handle `ChangePasswordNextLogon` logic.
Refactored password validation to improve security and usability.
Performed general code cleanup and updated project resources.

--- a/SpectrumV1.UI/App.config
+++ b/SpectrumV1.UI/App.config
@@ -22,9 +22,6 @@
             <setting name="CompactUI" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="CompanyId" serializeAs="String">
-                <value>0</value>
-            </setting>
             <setting name="CurrentLanguage" serializeAs="String">
                 <value>EN</value>
             </setting>
@@ -50,7 +47,7 @@
                 <value>False</value>
             </setting>
             <setting name="CompanyName" serializeAs="String">
-                <value>Vision^</value>
+                <value />
             </setting>
         </SpectrumV1.Properties.Settings>
     </userSettings>
